# cmake_steps

step1/: CMakeLists.txt  tutorial.cpp
step2/: CMakeLists.txt  tutorial.cpp
step2/MathFunctions/: CMakeLists.txt
step3/: CMakeLists.txt
step3/MathFunctions/: CMakeLists.txt
step4/: CMakeLists.txt
step5/: CMakeLists.txt
step5/MathFunctions/: CMakeLists.txt
step6/: CMakeLists.txt  License.txt
step6/MathFunctions/: MakeTable.cpp
step7/: CMakeLists.txt  License.txt
